melhorias no codigo, pagina upload

--- a/collecor/src/main/resources/templates/sobre.html
+++ b/collecor/src/main/resources/templates/sobre.html
@@ -7,10 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/sobre.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footerpage.css">
-    <link rel="stylesheet" href="css/popup.css">
+    <link rel="stylesheet" href="css/paginas/sobre.css">
+    <link rel="stylesheet" href="css/fragments/navbar.css">
+    <link rel="stylesheet" href="css/fragments/footerpage.css">
+    <link rel="stylesheet" href="css/fragments/popup.css"> 
+    <title>Perfil</title>
 
     <title>Sobre</title>
   </head>
@@ -18,20 +19,19 @@
     <!--navbar-->
     <div th:replace="~{fragments :: navbar}"></div><br>
 
-    <center><h2>Objetivos</h2></center><br>
+    <center><h2 class="text-white fs-1">Objetivo</h2></center><br>
 
     <center>
         <div class="text-center px-5 py-1" style="background-color: #1E1455;" id="copy">
-            <p class="m-0 text-white">Site Collector provides a cloud-native data platform for ingesting data from on-premises log sources and active directories into Exabeam SaaS cloud with easy onboarding process, 
-            monitoring, and management through centralized cloud user interface.<br>
-            Site Collector collects messages, transfers, persists, and securely uploads event data; and connects to the Exabeam Security Operations Platform. Site Collector is the managed entry point for logs to be routed to other processing tools, 
-            such as Advanced Analytics, Data Lake, Incident Responder, and Case Manager in the Exabeam Security Management Platform. Site collectors gather logs from external servers, systems, and data centers.</p>
+            <p class="m-0 text-white">Oferecer um sistema eficiente, onde nosso usuários possam compartilhar suas ideias e trabalhos com o publico, de forma facil e confiavel<br>
+                Aqui você encontrará de tudo, você pode ajudar esta comunidade a crescer contrubuindo com suas criações<br>
+                No Visual Vision todos somos colaboradores</p>
         </div>
     </center>c
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <center><h2>Colaboradores:</h2></center>
+    <center><h2 class="text-white fs-4">Desenvolvedores:</h2></center>
     <div class="content">
         <div class="container"> 
             <!-- end row -->
@@ -115,7 +115,7 @@
                 <div class="col-lg-4">
                     <div class="text-center card-box">
                         <div class="member-card pt-2" style="padding: 1px;">
-                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/furina.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+                            <div class="thumb-lg member-thumb mx-auto"><img src="imgs/sobre/aisha.jpg" class="rounded-circle img-thumbnail" alt="profile-image"></div>
                             <div class="">
                                 <h4>Lívia Sartori</h4>
                                 <p class="text-muted">Web Designer, programadora front-end, aprendiz de Bootstrap e CSS, vivendo em uma floresta afastada do mundo... <br>A white bird<a href="#" class="text-pink"></a></p>
