--- a/collecor/src/main/resources/static/css/paginas/sobre.css
+++ b/collecor/src/main/resources/static/css/paginas/sobre.css
@@ -1,6 +1,7 @@
 body{
     border: none;
     background-color: #0B0530;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
 
 .member-card{
@@ -64,9 +65,6 @@ h4 {
     background-color: #fff;
     width: 70%;
     text-indent: 2%;
-}
-h2{
-    color: white;
 }
 h4{
     color: white;
