--- a/collecor/src/main/resources/templates/favoritos.html
+++ b/collecor/src/main/resources/templates/favoritos.html
@@ -7,10 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/favoritos.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footerpage.css">
-    <link rel="stylesheet" href="css/popup.css">
+    <link rel="stylesheet" href="css/paginas/favoritos.css">
+    <link rel="stylesheet" href="css/fragments/navbar.css">
+    <link rel="stylesheet" href="css/fragments/footerpage.css">
+    <link rel="stylesheet" href="css/fragments/popup.css"> 
+    <title>Perfil</title>
 
     <title>Favoritos</title>
   </head>
