--- a/collecor/src/main/resources/templates/fragments.html
+++ b/collecor/src/main/resources/templates/fragments.html
@@ -9,7 +9,7 @@
     <div th:fragment = "navbar">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand text-white mx-3" style="font-family: Orbitron; font-size: 25px; font-style: normal; font-weight: 500; line-height: normal;" href="#">Visual Vision</a>
+          <a class="navbar-brand text-white mx-3" style="font-family: Orbitron; font-size: 25px; font-style: normal; font-weight: 500; line-height: normal;" href="/home">Visual Vision</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -18,7 +18,7 @@
               <div class="container">
                 <ul class="navbar-nav d-flex">
                   <li class="nav-item active">
-                    <a class="nav-link btnhome" href="#">Home</a>
+                    <a class="nav-link btnhome" href="/home">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link btnloja" href="/loja">Loja</a>
@@ -28,6 +28,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link btnperfil" href="/perfil">Perfil <i class="ion-ios-arrow-down"></i></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link btnsobre" href="/upload">Publicar <i class="ion-ios-arrow-down"></i></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link btnsobre" href="/sobre">Sobre <i class="ion-ios-arrow-down"></i></a>
