--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/profile.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footerpage.css">
-    <link rel="stylesheet" href="css/popup.css"> 
+    <link rel="stylesheet" href="css/paginas/profile.css">
+    <link rel="stylesheet" href="css/fragments/navbar.css">
+    <link rel="stylesheet" href="css/fragments/footerpage.css">
+    <link rel="stylesheet" href="css/fragments/popup.css"> 
+    <title>Perfil</title>
     <title>Perfil</title>
   </head>
   <body>
@@ -33,7 +34,10 @@
     </div>
     
     <div class="mt-3 strip">
-      <h3 class="px-2 py-1 fs-2 fw-bold text-white">Criações</h3>
+      <div class="row">
+        <h3 class="px-2 py-1 fs-2 fw-bold text-white col-11 m-0">Criações</h3>
+        <a href="/upload" class="btn rounded-pill bg-success" style="height: 40px; width: 130px; font-size: 20px;">Adicionar</a>
+      </div>
     </div>
 
     <!--Content-Content-->
