--- a/collecor/src/main/resources/static/css/paginas/profile.css
+++ b/collecor/src/main/resources/static/css/paginas/profile.css
@@ -27,7 +27,7 @@ body{
   text-indent: 3%;
 }
 .card-background{
-  background-image:url('/imgs/favoritos/tabbar.jpg');
+  background-image: url('/imgs/compartilhadas/space.jpg');
 }
 .text-profile{
   color: #FFF;
