--- a/collecor/src/main/resources/static/css/paginas/loja.css
+++ b/collecor/src/main/resources/static/css/paginas/loja.css
@@ -3,7 +3,7 @@ body{
   background-color: #0B0530;
 }
 .tabbar{
-  background-image: url('/imgs/favoritos/tabbar.jpg');
+  background-image: url('/imgs/compartilhadas/space.jpg');
 
 }
 .img-fluid{
