--- a/collecor/src/main/resources/templates/fragments.html
+++ b/collecor/src/main/resources/templates/fragments.html
@@ -121,7 +121,7 @@
     <div th:fragment = "footer">
         <!--footer-->
         <footer class="position-sticky text-white text-center p-1">
-            <h6>Copyright by Thiago da Silva Lima and colaborators</h6>
+            <h6>Trabalho de conclusão de curso. ETEC eudecio luiz vincente. todos os direitos reservados ao colaboradores apresentados na pagina sobre</h6>
         </footer>
     </div>
 </body>
