--- a/collecor/src/main/resources/static/css/fragments/popup.css
+++ b/collecor/src/main/resources/static/css/fragments/popup.css
@@ -14,7 +14,7 @@
 
 /* Modal Content */
 .modal-content {
-    background-image: url('/imgs/favoritos/tabbar.jpg');
+    background-image: url('/imgs/compartilhadas/space.jpg');
     margin: auto;
     padding: 20px;
     border: 3px solid #7785FF;
