--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -34,9 +34,9 @@
     </div>
     
     <div class="mt-3 strip">
-      <div class="row">
+      <div class="row align-items-center">
         <h3 class="px-2 py-1 fs-2 fw-bold text-white col-11 m-0">Criações</h3>
-        <a href="/upload" class="btn rounded-pill bg-success" style="height: 40px; width: 130px; font-size: 20px;">Adicionar</a>
+        <a href="/upload" class="btn rounded-pill bg-success col-1" style="height: 40px; width: 120px; font-size: 20px;">Adicionar</a>
       </div>
     </div>
 
