--- a/collecor/src/main/resources/templates/loja.html
+++ b/collecor/src/main/resources/templates/loja.html
@@ -52,10 +52,11 @@
             <div class="row col-12 justify-content-center">
               <div class="pt-3 px-3" th:each="prods : ${products}" style="width: 18rem;">
                 <div class="card">
-                  <img th:href="${prods.imagePath}" class="card-img-top pt-1" alt="...">
+                  <img th:src="${prods.imagePath}" class="card-img-top" style="min-height: 290px" alt="...">
                   <div class="card-body" style="height: 131px">
                     <h5 class="card-title" th:text="${prods.name}"></h5>
                     <p class="card-text" th:text="${prods.description}"></p>
+                    <a href="#" class="btn mt-3 text-white" style="background-color: #4B18B0;">Baixar</a>
                   </div>
                 </div>
               </div>
