--- a/collecor/src/main/resources/templates/fragments.html
+++ b/collecor/src/main/resources/templates/fragments.html
@@ -21,7 +21,7 @@
                     <a class="nav-link btnhome" href="/home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link btnloja" href="/loja">Loja</a>
+                    <a class="nav-link btnloja" href="/loja">Biblioteca</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link btnfavoritos" href="favoritos">Favoritos</a>
