--- a/collecor/src/main/resources/templates/upload.html
+++ b/collecor/src/main/resources/templates/upload.html
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="caixa_upp d-flex flex-column justify-content-center align-items-center p-4 col-5 m-0" >
               <img src="/imgs/upload/bt upload icon.png" style="width: 275px; height: 269px" alt="" srcset="">
-              <div class="file btn btn-lg btn text-white">
+              <div class="inputBtn btn btn-lg btn text-white">
                 Carregar arquivo
                 <input type="file" name="file"/>
              </div>
@@ -43,9 +43,9 @@
             </select>
             <div class="caixa_upp d-flex flex-column justify-content-center align-items-center mt-5 p-4 col-5" >
               <img src="/imgs/upload/capa.png" style="width: 175px; height: 169px" alt="" srcset="">
-             <div class="file btn btn-lg btn text-white">
+             <div class="inputBtn btn btn-lg btn text-white">
               Escolher capa
-              <input type="file" name="file"/>
+              <input type="file" name="image"/>
            </div>
             </div>
             
