--- a/collecor/src/main/resources/templates/upload.html
+++ b/collecor/src/main/resources/templates/upload.html
@@ -29,26 +29,25 @@
           <div class="col-7">
             <div class="input-group mb-3">
               <span class="input-group-text text-white border-0" id="basic-addon1">Nome</span>
-              <input type="text" class="form-control" placeholder="Gatinho astronauta" name="name" aria-label="Username" aria-describedby="basic-addon1">
+              <input type="text" class="form-control" maxlength="55" placeholder="Gatinho astronauta" name="name" aria-label="Username" aria-describedby="basic-addon1">
             </div>
             <div class="input-group py-5">
               <span class="input-group-text text-white border-0">Descrição</span>
-              <textarea class="form-control" style="height: 180px;" name="description"  placeholder="Imagem de um gatinho astronauta brincando com o planeta terra" aria-label="With textarea"></textarea>
+              <textarea class="form-control" style="height: 180px;" name="description"  placeholder="Imagem de um gatinho astronauta brincando com o planeta terra" aria-label="With textarea" maxlength="200"></textarea>
             </div>
-            <select class="form-select" aria-label="Default select example" name="type">
+            <select class="form-select" aria-label="Default select example" name="type" onchange="handleSelectChange(this)">
               <option selected disabled>Tipo de arquivo</option>
               <option value="1">Video</option>
               <option value="2">Texto</option>
               <option value="3">Imagem</option>
             </select>
-            <div class="caixa_upp d-flex flex-column justify-content-center align-items-center mt-5 p-4 col-5" >
+            <div class="caixa_upp d-flex flex-column justify-content-center align-items-center mt-5 p-4 col-5" id="imageC">
               <img src="/imgs/upload/capa.png" style="width: 175px; height: 169px" alt="" srcset="">
              <div class="inputBtn btn btn-lg btn text-white">
               Escolher capa
               <input type="file" name="image"/>
-           </div>
             </div>
-            
+          </div>
             <button type="submit" class="rounded-4 text-white mt-3" style="margin-left: 70%;">Enviar</button>
           </div>
         </div>
@@ -58,5 +57,22 @@
     <div th:replace="~{fragments :: footer}"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/loginpopup.js"></script>
+    <script>
+      function handleSelectChange(select) {
+        var selectedOption = select.options[select.selectedIndex];
+        
+        if (selectedOption.value === "3") {
+          isImage();
+        }else{
+          whithoutImage()
+        }
+      }
+      function isImage() {
+        document.getElementById("imageC").style.visibility = "hidden";
+      }
+      function whithoutImage() {
+        document.getElementById("imageC").style.visibility = "visible";
+      }
+    </script>
   </body>
 </html>
