--- a/collecor/src/main/resources/static/css/paginas/upload.css
+++ b/collecor/src/main/resources/static/css/paginas/upload.css
@@ -64,3 +64,45 @@ input[type="file"] {
     right: 0;
     top: 0; 
 }
+#picture__input {
+    display: none;
+  }
+  
+  .picture {
+    width: 400px;
+    aspect-ratio: 16/9;
+    background: #041642;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0B0530;
+    border: 2px dashed currentcolor;
+    cursor: pointer;
+    font-family: sans-serif;
+    transition: color 300ms ease-in-out, background 300ms ease-in-out;
+    outline: none;
+    overflow: hidden;
+  }
+  
+  .picture:hover {
+    color: #0B0530;
+    background: #0B0530;
+  }
+  
+  .picture:active {
+    border-color: turquoise;
+    color: turquoise;
+    background: #eee;
+  }
+  
+  .picture:focus {
+    color: #0B0530;
+    background: #041642;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .picture__img {
+    max-width: 100%;
+  }
+
+  
