--- a/collecor/src/main/resources/templates/upload.html
+++ b/collecor/src/main/resources/templates/upload.html
@@ -16,17 +16,18 @@
     <!--navbar-->
     <div th:replace="~{fragments :: navbar}" ></div>
     
-    <div class="container-fluid d-flex justify-content-center my-4" style="height: 88vh;">
-      <form  class="rounded-5 content p-5 col-12" style="height: 88vh;" method="post" action="/products/uploadArquivo" enctype="multipart/form-data">
+    <div class="container-fluid d-flex justify-content-center my-4">
+      <form  class="rounded-5 content p-5 col-12"method="post" action="/products/uploadArquivo" enctype="multipart/form-data" style="height: 88vh;">
         <div class="row">
-          <div class="caixa_upp d-flex flex-column justify-content-center align-items-center p-4 col-5 m-0" >
-              <img src="/imgs/upload/bt upload icon.png" style="width: 275px; height: 269px" alt="" srcset="">
-              <div class="inputBtn btn btn-lg btn text-white">
-                Carregar arquivo
-                <input type="file" name="file"/>
-             </div>
+          <div class="caixa_upp d-flex flex-column justify-content-center align-items-center col-5 m-0" >
+              <img src="/imgs/upload/bt upload icon.png" style="width: 200px; height: 200px" alt="" srcset="">
+              <div class='input-wrapper text-white'>
+                <label for='input-file'> Selecionar um arquivo </label>
+                <input id='input-file' type='file' value='' onchange='updateFileName()' />
+                <span id='file-name' name="file" class="m-0"></span>
+              </div>
           </div>
-          <div class="col-7">
+          <div class="col-7 row">
             <div class="input-group mb-3">
               <span class="input-group-text text-white border-0" id="basic-addon1">Nome</span>
               <input type="text" class="form-control" maxlength="55" placeholder="Gatinho astronauta" name="name" aria-label="Username" aria-describedby="basic-addon1">
@@ -35,21 +36,21 @@
               <span class="input-group-text text-white border-0">Descrição</span>
               <textarea class="form-control" style="height: 180px;" name="description"  placeholder="Imagem de um gatinho astronauta brincando com o planeta terra" aria-label="With textarea" maxlength="200"></textarea>
             </div>
-            <select class="form-select" aria-label="Default select example" name="type" onchange="handleSelectChange(this)">
+            <select class="form-select mx-3" aria-label="Default select example" name="type" onchange="handleSelectChange(this)">
               <option selected disabled>Tipo de arquivo</option>
               <option value="1">Video</option>
               <option value="2">Texto</option>
               <option value="3">Imagem</option>
             </select>
-            <div class="caixa_upp d-flex flex-column justify-content-center align-items-center mt-5 p-3 col-5" id="imageC">
-              <img src="/imgs/upload/capa.png" style="width: 80px; height: 80px" alt="" srcset="">
-              <label class="picture" for="picture__input" tabIndex="0">
-                <span class="picture__image"></span>
-              </label>
-              
-              <input type="file" name="picture__input" id="picture__input">
-          </div>
-            <button type="submit" class="rounded-4 text-white mt-3" style="margin-left: 70%;">Enviar</button>
+            <div class="row">
+              <div class="mt-3 p-3 col-5" id="imageC">
+                <label class="picture rounded-4" for="picture__input" tabIndex="0">
+                  <span class="picture__image"></span>
+                </label>
+                <input type="file" name="picture__input" id="picture__input">
+              </div>
+              <button type="submit" class="rounded-4 text-white" style="margin-left: 25%; margin-top: 25%;">Enviar</button>
+            </div>
           </div>
         </div>
       </form>
@@ -77,7 +78,7 @@
 
       const inputFile = document.querySelector("#picture__input");
 const pictureImage = document.querySelector(".picture__image");
-const pictureImageTxt = "Choose an image";
+const pictureImageTxt = "Selecione uma imagem";
 pictureImage.innerHTML = pictureImageTxt;
 
 inputFile.addEventListener("change", function (e) {
@@ -103,6 +104,14 @@ inputFile.addEventListener("change", function (e) {
     pictureImage.innerHTML = pictureImageTxt;
   }
 });
+
+function updateFileName() {
+  const input = document.getElementById('input-file');
+  const fileName = input.files[0].name;
+  const fileNameSpan = document.getElementById('file-name');
+  fileNameSpan.textContent = fileName;
+}
+
 
     </script>
   </body>
